add_executable(template template.cpp)
add_executable(1_2_01 1_2_01.cpp)
add_executable(1_2_02 1_2_02.cpp)
add_executable(1_2_03 1_2_03.cpp)
add_executable(1_2_04 1_2_04.cpp)
add_executable(1_2_05 1_2_05.cpp)
add_executable(1_3_01 1_3_01.cpp)
add_executable(1_3_02 1_3_02.cpp)
add_executable(1_3_03 1_3_03.cpp)
add_executable(1_3_04 1_3_04.cpp)
add_executable(1_3_05 1_3_05.cpp)
add_executable(1_4_01 1_4_01.cpp)
add_executable(1_4_02 1_4_02.cpp)
add_executable(1_4_03 1_4_03.cpp)
add_executable(1_4_04 1_4_04.cpp)
add_executable(1_4_05 1_4_05.cpp)
add_executable(1_4_06 1_4_06.cpp)
add_executable(1_5_01 1_5_01.cpp)
add_executable(1_5_02 1_5_02.cpp)
add_executable(1_6_01 1_6_01.cpp)
add_executable(1_6_02 1_6_02.cpp)
add_executable(1_6_03 1_6_03.cpp)